css/stylish-portfolio.css
/*!
 * Start Bootstrap - Stylish Portfolio (http://startbootstrap.com/)
 * Copyright 2013-2016 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
 */

/* ----- Global Styles ----- */

html,
body {
    width: 100%;
    height: 100%;
}

body {
    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
}

h2 {
  color: #20A294;
}

.text-vertical-center {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}

.text-vertical-center h1 {
    margin: 0;
    padding: 0;
    font-size: 4.5em;
    font-weight: 700;
}

/* ----- Custom Button Styles ----- */

.btn-dark {
    border-radius: 0;
    color: #fff;
    background-color: rgba(0,0,0,0.4);
}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active {
    color: #fff;
    background-color: rgba(0,0,0,0.7);
}

.btn-light {
    border-radius: 0;
    color: #333;
    background-color: rgb(255,255,255);
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
    color: #333;
    background-color: rgba(255,255,255,0.8);
}

/* ----- Custom Horizontal Rule ----- */

hr.small {
    max-width: 100px;
}

/* ----- Side Menu ----- */

#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    right: 0;
    width: 250px;
    height: 100%;
    transform: translateX(250px);
    overflow-y: auto;
    background: #005D53;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -ms-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s;
}

.sidebar-nav {
    position: absolute;
    top: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #999;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: #BF5100;
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    height: 55px;
    font-size: 18px;
    line-height: 55px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

#menu-toggle {
    z-index: 1;
    position: fixed;
    top: 0;
    right: 0;
}

#sidebar-wrapper.active {
    right: 250px;
    width: 250px;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -ms-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s;
}

.toggle {
    margin: 5px 5px 0 0;
}

img.logo {
  width: 20%;
  height: auto;
}

@media (min-width: 400px) {
  img.logo {
    width: 20%;
    height: auto;
  }
}

@media (min-width: 600px) {
  img.logo {
    width: 20%;
    height: auto;
  }
}



.nav-down {
  padding-top: 20px;
}

/*  ----- Header ----- */

.header {
    display: table;
    position: relative;
    width: 100%;
    height: 100%;
    background: url(../img/Mobile_Skyline_teal.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    color: white;
}

#home-logo {
  position: absolute;
  z-index: 1;
  width: 12%;
  height: auto;
}

@media (min-width: 400px) {
  #home-logo {
    width: 10%;
    height: auto;
  }
}

@media (min-width: 600px) {
  #home-logo {
    width: 7.5%;
    height: auto;
  }
}

@media (min-width: 1000px) {
  #home-logo {
    width: 4%;
    height: auto;
  }
}

#btn-header {
  background-color: #F16600;
  color: #fff;
}

/* ----- About ----- */

.about {
    padding: 50px 0;
}

.php-logo {
  width: 50px;
}

.wordpress-logo {
  width: 50px;
}

.html-logo {
  width: 50px;
}

.css-logo {
  width: 50px;
}

/* ----- Portfolio ----- */

.portfolio {
    padding: 50px 0;
}

.portfolio-item {
    margin-bottom: 30px;
}

.img-portfolio {
    margin: 0 auto;
}

.img-portfolio:hover {
    opacity: 0.8;
}

/* ----- Services ----- */

.services {
    padding: 50px 0;
    color: #fff;
    background-color: #00776A;
}

.service-item {
    margin-bottom: 30px;
}

.services h2 {
  color: #fff;
}

.text-primary {
    color: #00776A;
}

/* ----- Footer ----- */

footer {
    padding: 100px 0;
}

footer h4 {
    color: #004D40;
}

footer p {
    color: #004D40;
}

footer a {
    color: #FF8A33;
}

#to-top {
  display: none;
  position: fixed;
  bottom: 5px;
  right: 5px;
}

